Pushed changes related to univariate analysis

--- a/Kumar_Gaurav.ipynb
+++ b/Kumar_Gaurav.ipynb
@@ -3252,7 +3252,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### When the Sub Grade is A4 then the loan is most likely to default but this not very significant"
+    "##### When the Sub Grade is A4 then the loan is most likely to default."
    ]
   },
   {
@@ -3454,7 +3454,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Large number of loans defaulted in dec month, but it not much significant"
+    "##### Large number of loans defaulted in dec month"
    ]
   },
   {
@@ -3528,7 +3528,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### When dti is between 12-15 the loan is most likely to default, but this not much significant."
+    "##### When dti is between 12-15 the loan is most likely to default"
    ]
   },
   {
